--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -24,4 +24,12 @@ h1 {
 .task-list li {
   margin-bottom: 8px;
 }
+.completed {
+  text-decoration: line-through;
+  color: gray;
+}
+
+.task-list li button {
+  margin-left: 10px;
+}
 
