refactor: use event delegation for task actions

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -32,4 +32,8 @@ h1 {
 .task-list li button {
   margin-left: 10px;
 }
+.task-text.completed {
+  text-decoration: line-through;
+  color: gray;
+}
 
